syntax = "proto3";

package most.simple.mcd;

option go_package = "api";

service User {
    // 用户登录
    rpc login (LoginReq) returns (LoginResp);
    // 用户注销
    rpc logout (LogoutReq) returns (LogoutResp);
    // 获取用户信息
    // `middleware:"auth"`
    rpc info (InfoReq) returns (InfoResp);
    // 更新用户信息
    // `middleware:"auth"`
    rpc update (UpdateReq) returns (UpdateResp);
}

message LoginReq {
    // 账号
    string account = 1;
    // 密码
    string password = 2;
}

message LoginResp {
    // 登录态token
    string token = 1;
}

message LogoutReq {
}

message LogoutResp {
}

message InfoReq {
}

message InfoResp {
    // 账号
    string account = 1;
    // 密码
    string password = 2;
    // 昵称
    string nickname = 3;
    // 权限
    repeated string roles = 4;
    // 头像
    string avatar = 5;
}

message UpdateReq {
    // 账号
    string account = 1;
    // 密码
    string password = 2;
    // 昵称
    string nickname = 3;
    // 权限
    repeated string roles = 4;
    // 头像
    string avatar = 5;
}

message UpdateResp {
}
